<resources>
    <string name="app_name" translatable="false">Muweiz</string>
    <string name="metronomo">Metrónomo</string>
    <string name="afinador">Afinador</string>
    <string name="teoria">Teoría</string>
    <string name="ejercicios">Ejercicios</string>
    <string name="instrumentos">Instrumentos</string>
    <string name="generos">Géneros</string>
    <string name="buscar_cancion">Buscar Canción</string>
    <string name="tempo">Tempo</string>
    <string name="subdivision">Subdivisión</string>
    <string name="iniciar">Iniciar</string>
    <string name="configuracion">Configuración</string>
    <string name="ts">T.S</string>
    <string name="afinacion_tipo">Afinación Tipos</string>
    <string name="conceptos">Conceptos</string>
    <string name="intervalos">Intervalos</string>
    <string name="armonia_basica">Armonía Básica</string>
    <string name="escalas_modos">Escalas y Modos</string>
    <string name="cad_IIVI">Cadencia II-V-I</string>
    <string name="analisis_armonico">Análisis Armónico</string>
    <string name="voicings">II-V-I Voicings</string>
    <string name="auditivo">Auditivo</string>
    <string name="ritmo">Ritmo</string>
    <string name="lectura">Lectura</string>
    <string name="bajo">Bajo</string>
    <string name="guitarra">Guitarra</string>
    <string name="piano">Piano</string>
    <string name="clasico">Clásico</string>
    <string name="gospel">Góspel</string>
    <string name="buscador_cancion">Busca la canción o artista</string>
    <string name="confirmar_salida">Confirmar salida</string>
    <string name="pregunta_confirmar_salida">¿Estás seguro que quieres salir?\nSe cerrara su sesion\nde forma automatica</string>
    <string name="SuccessSignInGoogle">Inicio de sesión con Google exitoso</string>
    <string name="NoSuccessSignInGoogle">Error de inicio de sesión con Google</string>
    <string name="SuccessSignIn">Ingreso Correctamente</string>
    <string name="NoSuccessSign">Error de Email o Password</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="estas_home">Ya
        estás
        en
        Home</string>



    <string name="login_sign_in">¿Todavía no tienes cuenta? Regístrate</string>
    <string name="login_button_loggin">INICIAR SESIÓN</string>
    <string name="ingresarBtn">Ingresar</string>
    <string name="login_hint_password">Contraseña</string>
    <string name="login_hint_user">Usuario o correo</string>
    <string name="login_error_mail">El email no es válido</string>
    <string name="login_error_password">Debe contener al menos 4 caracteres</string>
    <string name="login_footer_unselected">¿Todavía no tienes cuenta?</string>
    <string name="login_footer_selected">Regístrate</string>
    <string name="login_footer_selectedGo">Regístrate Con Google</string>
    <string name="login_error_dialog_title">No hemos encontrado el usuario</string>
    <string name="login_error_dialog_body">Verifique los datos o vuelva a intentarlo</string>
    <string name="login_error_dialog_negative_action">Cancelar</string>
    <string name="login_error_dialog_positive_action">Reintentar</string>

    <string name="introduction_button_signin">Crear cuenta</string>

    <string name="signin_form_real_name">Nombre completo</string>
    <string name="signin_form_nickname">Nombre público de usuario</string>
    <string name="signin_form_email">Correo electrónico</string>
    <string name="signin_form_password">Contraseña</string>
    <string name="signin_form_repeat_password">Repetir contraseña</string>
    <string name="signin_error_mail">El email no es válido</string>
    <string name="signin_error_nickname">Debe contener al menos 6 caracteres</string>
    <string name="signin_error_realname">Debe contener al menos 6 caracteres</string>
    <string name="signin_error_password">Las 2 contraseñas debes ser iguales</string>
    <string name="signin_footer_unselected">¿Ya tienes cuenta?</string>
    <string name="signin_footer_selected">Inicia sesión</string>
    <string name="signin_error_dialog_title">Ha ocurrido un error</string>
    <string name="signin_error_dialog_body">No hemos podido crear tu cuenta, inténtalo de nuevo más tarde</string>
    <string name="signin_error_dialog_positive_action">Okey :(</string>

    <string name="verification_button_go_to_nuwe">Comencemos</string>
    <string name="verification_check_mail">Para acceder a la aplicación verifica tu correo electrónico (recuerda mirar en SPAM).</string>

    <string name="feature_not_allowed">Feature no solicitada</string>
    <string name="signin_button_createaccount">Crear mi cuenta</string>


    <string name="dialog_success_title">¡Inicio completado!</string>
    <string name="dialog_success_body">"Gracias Por Iniciar Sesion ya puedes continuar con la aplicacion "</string>
    <string name="dialog_success_positive">¡Gracias!</string>

    <string name="first_fragment_label">Etiqueta del primer fragmento</string>
    <string name="app_auth_redirect_scheme">http</string>
    <string name="wip">Estamos\nTrabajando</string>




    <eat-comment>Conceptos!</eat-comment>
    <string name="h1_Conceptos_1">Terminología\n\n</string>
    <string name="p1_Conceptos_1">\tPara representar la musica de forma gráfica es necesario comprender dos conceptos:\n\t<b>La Horizontalidad:</b> Nos habla de la duración de las notas y el ritmo\n\t<b>La Verticalidad:</b> Nos habla de la altura de las notas y de sus distancias.\n</string>
    <string name="p2_Conceptos_1">Si no entiendes esto de momento, no te preocupes, poco a poco iremos ahondando más en estos temas.\n</string>
    <string name="h2_Conceptos_1.2">\t1.2 Vertical\n</string>
    <string name="h3_Conceptos_1.2.1">\t\t1.2.1 El Pentagrama\n</string>
    <string name="p1_Conceptos_1.2.1">\t\t\tEs la forma de escribir o representar gráficamente la música, está conformado de cinco líneas horizontales y paralelas\nEs la base en la cual se añaden signos y figuras rítmicas, cada línea y cada espacio del pentagrama representan una figura musical.\nEn resumen, el pentagrama es una estructura de cinco líneas horizontales utilizada para representar gráficamente la música escrita, permitiendo la ubicación precisa de las notas y otros símbolos musicales en relación con su altura y duración.\n</string>
    <string name="h3_Conceptos_1.2.2">\t1\t1.2.2 Las Claves\n</string>
    <string name="p1_Conceptos_1.2.2">\t\t\tEs un simbolo que se escribe al inicio de la partitura y sobre el pentagrama, el cual define la posición exacta de las notas a la que corresponderá cada línea y espacio del pentagrama. \n</string>
    <string name="h3_Conceptos_1.2.2.1">\t1\t\t1.2.2.1 Clave de Sol\n</string>
    <string name="p1_Conceptos_1.2.2.1">\t\t\t\tLa clave de sol se asemeja a una "S" y se posiciona sobre la segunda linea de abajo arriba del pentagrama,lo cual indica que esa línea representa la nota Sol\n</string>
    <string name="p2_Conceptos_1.2.2.1">La clave de sol también es conocida como clave de soprano \n</string>
    <string name="h3_Conceptos_1.2.2.2">\t1\t\t1.2.2.2 Clave de Sol\n</string>
    <string name="p1_Conceptos_1.2.2.2">\t\t\t\tLa clave de fa, que se parece a una "F" invertida, se coloca en la tercera o cuarta linea de abajo arriba del pentagrama. Esta línea representa la nota Fa \n</string>
    <string name="p2_Conceptos_1.2.2.2">La clave de fa también es conocida como clave de bajo\n</string>
    <string name="h3_Conceptos_1.2.2.3">\t1\t\t1.2.2.3 Clave de Do\n</string>
    <string name="p1_Conceptos_1.2.2.3">\t\t\t\tLa clave de do, son dos “C” invertidas y estilizadas, se coloca en la tercera o cuarta linea de abajo arriba del pentagrama. Esta línea representa la nota Do\n</string>
    <string name="p2_Conceptos_1.2.2.3">La clave de do en tercera también es conocida como clave de alto y la de do en cuarta es conocida como la clave de tenor\n</string>
    <string name="h3_Conceptos_1.2.2.4">\t1\t\t1.2.2.4 Clave de Percusión\n</string>
    <string name="p1_Conceptos_1.2.2.4">\t\t\t\tLa clave de percusión, se escribe colocando dos barras verticales y paralelas, se utiliza para indicar que la música escrita es para instrumentos de percusión. En lugar de representar alturas específicas, se utilizan símbolos adicionales para indicar qué instrumentos de percusión tocarán en esa parte de la música.\n</string>
    <string name="h3_Conceptos_1.2.3">\t1\t1.2.3 Las Notas\n</string>
    <string name="p1_Conceptos_1.2.3">\t\t\tDependen de la clave, de la posición en el pentagrama y de la figura con la que se presenten.\n</string>
    <string name="h3_Conceptos_1.2.4">\t1\t1.2.5 Líneas Adicionales\n</string>
    <string name="p1_Conceptos_1.2.4">\t\t\t En ocasiones es necesario agregar líneas adicionales al pentagrama para denotar notas que se salen del registro del pentagrama.\n</string>
    <string name="h3_Conceptos_1.2.5">\t1\t1.2.5 El Endecagrama\n</string>
    <string name="p1_Conceptos_1.2.5">\t\t\tEl gran pentagrama o endecagrama es un la forma primitiva del pentagrama, como su nombre lo indica posee 11 líneas por lo cual era muy complejo de leer.\nHoy día lo que utilizamos es el nuevo concepto de gran pentagrama que es la forma habitual de escribir obras para piano la cual es usar de forma múltiple la clave de sol y la clave de fa, para denotar las notas altas y las bajas del piano en cada sección de la obra musical.\n</string>

    <eat-comment>INTERVALOS!</eat-comment>

    <string name="def_intervalos">
        Para entender cualquier melodía o armonía musical, es esencial tener una sólida comprensión de los intervalos. En teoría musical, un intervalo es la distancia entre dos tonos, que puede medirse en semitonos o tonos.\n\n
        En la música occidental, el intervalo más pequeño es el semitono, que es la distancia entre dos teclas adyacentes en un piano. El siguiente intervalo más pequeño es el paso entero o tono, que es la distancia entre las notas que están a dos teclas de distancia en el piano.\n\n
        Las mediciones de intervalos constan de dos partes: cantidad y calidad. La cantidad de un intervalo viene determinada por su valor numérico, que se basa en el alfabeto musical (Do, Re, Mi, Fa, Sol, La, Si). Por ejemplo, el intervalo formado por las notas Do y Sol siempre será algún tipo de quinta, independientemente de la cualidad de Do o Sol (si son bemoles o sostenidos).\n\n
        La calidad de un intervalo viene determinada por el número de semitonos que hay entre las dos notas. Existen cinco calidades básicas de intervalos: perfectos, mayores, menores, aumentados y disminuidos. Los intervalos perfectos (unísono, cuarta, quinta y octava) se consideran los más estables y consonantes, mientras que los intervalos mayores y menores (tercera, sexta y séptima) crean más tensión y disonancia.\n\n
        En resumen, los intervalos son un concepto fundamental en la teoría musical y son esenciales para comprender la estructura y las relaciones entre las notas y los acordes en la música.

    </string>




    <eat-comment>Etiqueta Imagenes!</eat-comment>
    <string name="img_Pentagrama_1.2.1">Imagen de Pentagrama</string>
    <string name="img_trebleClef.1.2.2.1">Clave de Sol</string>
    <string name="img_bassClef.1.2.2.2">Clave de Fa</string>
    <string name="img_altoClef.1.2.2.3">Clave de Do en tercera</string>
    <string name="img_tenorClef.1.2.2.3">Clave de Do en Cuarta</string>
    <string name="img_percusionClef.1.2.2.4">Clave de Percusión</string>
    <string name="img_lineasAdicionales.1.2.4">Líneas Adicionales</string>
    <string name="img_GranPentagrama.1.2.5">El Gran Pentagrama</string>

</resources>